--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -20,14 +20,14 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">CampaignlUrl：</label>
                 <div class="col-sm-5">
-                    <input type="url" name="url" class="form-control" ng-model="item.url" ng-show="item.url" ng-disabled="true">
+                    <input type="url" name="url" class="form-control" ng-model="item.url" ng-show="item.url" ng-readonly="true">
                     <label ng-show="!item.url">ID will be available after saving the campaign.</label>
                 </div>
             </div>
             <div class="form-group" ng-show="impPixelUrl==1">
                 <label class="col-sm-3 control-label">ImpressionPixelUrl：</label>
                 <div class="col-sm-5">
-                    <input type="url" name="impPixelUrl" class="form-control" ng-model="item.impPixelUrl" ng-show="item.impPixelUrl" ng-disabled="true">
+                    <input type="url" name="impPixelUrl" class="form-control" ng-model="item.impPixelUrl" ng-show="item.impPixelUrl" ng-readonly="true">
                     <label ng-show="!item.impPixelUrl">ID will be available after saving the campaign.</label>
                 </div>
             </div>
@@ -152,9 +152,9 @@
             </div>
             <div class="flow-action" ng-show="item.targetType==1">
                 <div class="form-group flow-select">
-                    <label class="col-sm-3 control-label">Flow：</label>
+                    <label class="col-sm-3 control-label">Flow<span class="star-icon">*</span>：</label>
                     <div class="col-sm-5">
-                        <md-select class="cs-subform-select" name="flow" ng-model="item.flow.id">
+                        <md-select class="cs-subform-select" name="flow" ng-model="item.flow.id" ng-required="item.targetType==1">
                             <md-option value="{{flow.id}}" ng-repeat="flow in flows">{{flow.name}}</md-option>
                         </md-select>
                     </div>
@@ -177,9 +177,13 @@
 
             <div class="url-token-con" ng-show="item.targetType==0">
                 <div class="form-group">
-                    <label class="col-sm-3 control-label">Url：</label>
+                    <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>：</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control" name="targetUrl" ng-model="item.targetUrl">
+                        <input type="url" class="form-control" name="targetUrl" ng-model="item.targetUrl" ng-required="item.targetType==0">
+                        <span style="color:red" ng-show="editForm.targetUrl.$dirty && editForm.targetUrl.$invalid">
+                        <span ng-show="editForm.targetUrl.$error.required">Url is required.</span>
+                        <span ng-show="editForm.targetUrl.$error.url">Url is invalid.</span>
+                        </span>
                     </div>
                 </div>
                 <div class="url-tokens-row form-group">
