--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -59,6 +59,7 @@
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-elastic/elastic.js"></script>
 <script src="../bower_components/angular-chart.js/dist/angular-chart.js"></script>
+<script src="../bower_components/angular-clipboard/angular-clipboard.js"></script>
 
 <!-- App -->
 <script src="js/app.js"></script>
