--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -20,8 +20,15 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">CampaignlUrl：</label>
                 <div class="col-sm-5">
-                    <input type="url" name="url" class="form-control" ng-model="item.url" ng-show="item.url" ng-disabled="true">
+                    <input type="url" name="url" class="form-control campaign-url" ng-model="item.url" ng-show="item.url" ng-disabled="true">
                     <label ng-show="!item.url">ID will be available after saving the campaign.</label>
+                </div>
+                <div class="col-sm-4">
+                    <md-button clipboard class="md-raised copied-btn" ng-show="item.url" text="item.url" ng-click="itemUrlClick()">
+                        <i class="material-icons">content_copy</i>
+                        {{btnWord1}}
+                        <!-- Clipboard -->
+                    </md-button>
                 </div>
             </div>
             <div class="form-group">
@@ -29,6 +36,13 @@
                 <div class="col-sm-5">
                     <input type="url" name="impPixelUrl" class="form-control" ng-model="item.impPixelUrl" ng-show="item.impPixelUrl" ng-disabled="true">
                     <label ng-show="!item.impPixelUrl">ID will be available after saving the campaign.</label>
+                </div>
+                <div class="col-sm-4">
+                    <md-button clipboard class="md-raised copied-btn" ng-show="item.impPixelUrl" text="item.impPixelUrl" ng-click="impPixelUrlClick()">
+                        <i class="material-icons">content_copy</i>
+                        {{btnWord2}}
+                        <!-- Clipboard -->
+                    </md-button>
                 </div>
             </div>
             <div class="form-group">
