Affiliate network-默认没有url, 如果是trust affilaite network 加载过来的就显示postback url

--- a/Front/src/tpl/affiliateNetwork-edit-dialog.html
+++ b/Front/src/tpl/affiliateNetwork-edit-dialog.html
@@ -25,6 +25,19 @@
                     </span>
                 </div>
             </div>
+            <div class="form-group" ng-show="item.postbackurl">
+                <label class="col-sm-3 control-label">Postback URL：</label>
+                <div class="col-sm-5">
+                    <input type="url" name="url" class="form-control campaign-url" ng-model="item.postbackurl" ng-readonly="true">
+                </div>
+                <div class="col-sm-4">
+                    <md-button clipboard class="md-raised copied-btn" text="item.postbackurl" ng-click="itemUrlClick()">
+                        <i class="material-icons">content_copy</i>
+                        {{btnWord}}
+                        <!-- Clipboard -->
+                    </md-button>
+                </div>
+            </div>
             <div class="form-group" ng-show="false">
                 <label class="col-sm-3 control-label">{{'affiliateNetworkPostBackUrl' | translate}}: </label>
                 <div class="col-sm-4">
