--- a/Front/src/tpl/trafficSource-template-dialog.html
+++ b/Front/src/tpl/trafficSource-template-dialog.html
@@ -16,7 +16,7 @@
     </form>
   </md-dialog-content>
   <md-dialog-actions>
-    <md-button class="md-primary" ng-click="ctrl.save()" ng-disabled="editForm.$invalid">{{'save' | translate}}
+    <md-button class="md-primary" ng-click="ctrl.save()" ng-disabled="editForm.$invalid">{{'Load template' | translate}}
     </md-button>
     <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
   </md-dialog-actions>
