--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -85,19 +85,19 @@
                     <tbody>
                     <tr>
                         <td class="col-sm-3 control-label">External ID：</td>
-                        <td class="traficc-source-input"><input type="text" ng-model="item.externalId.Parameter"></td>
-                        <td class="traficc-source-input"><input type="text" ng-model="item.externalId.Placeholder"></td>
-                        <td class="traficc-source-input"><input type="text" ng-model="item.externalId.Name" disabled></td>
+                        <td class="traficc-source-input"><input type="text" ng-model="externalId.Parameter"></td>
+                        <td class="traficc-source-input"><input type="text" ng-model="externalId.Placeholder"></td>
+                        <td class="traficc-source-input"><input type="text" ng-model="externalId.Name" disabled></td>
                         <td class="traficc-source-input"></td>
                     </tr>
                     <tr>
                         <td class="col-sm-3 control-label">Cost：</td>
-                        <td class="traficc-source-input"><input type="text" ng-model="item.cost.Parameter"></td>
-                        <td class="traficc-source-input"><input type="text" ng-model="item.cost.Placeholder"></td>
-                        <td class="traficc-source-input"><input type="text" ng-model="item.cost.Name" disabled></td>
+                        <td class="traficc-source-input"><input type="text" ng-model="cost.Parameter"></td>
+                        <td class="traficc-source-input"><input type="text" ng-model="cost.Placeholder"></td>
+                        <td class="traficc-source-input"><input type="text" ng-model="cost.Name" disabled></td>
                         <td class="traficc-source-input"></td>
                     </tr>
-                    <tr ng-repeat="param in item.params track by $index">
+                    <tr ng-repeat="param in params track by $index">
                         <td class="col-sm-3 control-label">Custom variable{{$index+1}}：</td>
                         <td class="traficc-source-input"><input type="text" ng-model="param.Parameter"></td>
                         <td class="traficc-source-input"><input type="text" ng-model="param.Placeholder"></td>
