--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -157,13 +157,14 @@
             <i class="material-icons tree-icon">album</i>
             <span class="label label-default condition-select-content">{{cdt._def.display}} <em ng-click="deleteCondition(cdt)" class="em-close">x</em></span>
             <div class="btn-group is-btn">
-              <label class="btn btn-primary" ng-model="cdt.operand" uib-btn-radio="'is'">is</label>
-              <label class="btn btn-primary" ng-model="cdt.operand" uib-btn-radio="'isnt'">is not</label>
+              <label class="btn btn-primary" ng-model="cdt.operand" uib-btn-radio="cdt._def.operands[0].value">{{cdt._def.operands[0].display}}</label>
+              <label class="btn btn-primary" ng-model="cdt.operand" uib-btn-radio="cdt._def.operands[1].value">{{cdt._def.operands[1].display}}</label>
             </div>
             <br/>
             <div class="cs-condition-field cs-condition-{{f.type}}" ng-repeat="f in cdt._def.fields">
               <p class="cs-condition-desc" ng-if="f.desc">{{f.desc}}</p>
               <div class="col-md-4 day-input-content" ng-if="f.label">{{f.label}}</div>
+
               <div ng-if="f.type=='textarea'" ng-class="{'col-md-10': f.label}" class="textarea-content">
                 <textarea ng-model="cdt[f.name]"></textarea>
               </div>
@@ -239,7 +240,7 @@
 
                 <div class="col-sm-12 col-md-4 cs-l2select-selected list-content">
                   <md-chips ng-model="cdt[f.name]" readonly="true" md-removable="true">
-                    <md-chip-template>{{cdt._def._fv2n[f.name][$chip]}}</md-chip-template>
+                    <md-chip-template>{{f._v2n[$chip]}}</md-chip-template>
                   </md-chips>
                 </div>
               </div>
@@ -255,11 +256,11 @@
                       md-no-cache="true"
                       md-min-length="0"
                       md-items="item in querySearchIn(searchText, f.options, cdt[f.name])"
-                      md-item-text="item.display"
+                      md-item-text="f._v2n[item]"
                       placeholder="{{f.placeholder}}">
-                    <span md-highlight-text="searchText">{{item.display}}</span>
+                    <span md-highlight-text="searchText">{{f._v2n[item]}}</span>
                   </md-autocomplete>
-                  <md-chip-template><span>{{$chip.display}}</span></md-chip-template>
+                  <md-chip-template><span>{{f._v2n[$chip]}}</span></md-chip-template>
                 </md-chips>
               </div>
             </div>
